# dead

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  VERSIONS.py  bisector.py  bisectorfunctions.py  bugs.md  build_docker.sh  builder.py  checker.py  config.json  database.py  debugtool.py  didead.py  didead2.py  dockerconfig.json  gcc_preprocessed_code.c  generator.py  init.py  main.py  mypy.ini  parsers.py  patchdatabase.py  patcher.py  preprocessed_oracle.c  preprocessing.py  reducer.py  reducerfunction.py  repository.py  requirements.txt  requirements_dev.txt  requirements_hook.txt  run_parallel.sh  sanitize.py  setup.cfg  test_preprocessed.py  (+1 more)
.github/workflows/: lint-python.yaml  test-python.yaml
callchain_checker/: CMakeLists.txt
callchain_checker/src/: CMakeLists.txt  CallChainChecker.cpp  CallChainChecker.hpp  CallChainCheckerTool.cpp
dce_instrumenter/: CMakeLists.txt
dce_instrumenter/src/: CMakeLists.txt  DCEInstrumenter.cpp  DCEInstrumenter.hpp  FIPCFGExtractor.cpp  FIPCFGExtractor.hpp
dce_instrumenter/src/tool/: CMakeLists.txt  DCEInstrument.cpp  StaticAnnotator.cpp
dce_instrumenter/test/: CMakeLists.txt  dcec_test.cpp  dcei_test.cpp  static_global_test.cpp  test_driver.cpp  test_tool.cpp  test_tool.hpp
dead/: __init__.py  __main__.py  bisector.py  checker.py  config.py  database.py  diagnose.py  differential_testing.py  generator.py  output.py  progressbar.py  reducer.py  reduction.py  test_init.py  utils.py
git-hooks/: pre-commit
patches/: 0001-MicrosoftDemangleNodes-missing-includes.patch  gcc-fix-simple-object-decl-and-use-in-gcc-lto.patch  gcc-libsanitizer-assertion-failure.patch  gcc-libsanitizer.sh  gcc-simple-object-declaration.patch  llvm-GCOpenMPRuntime.cpp-lambda-issues.patch  llvm-MicrosoftDemangleNodes.h-fix-includes.patch  patchdb.json
scripts/: README.md  check_marker.py  compiler_builder.sh  dce_reduction_check.py  find_marker_status.sh  find_missed_opportunities.py  find_missed_opportunities.sh  generate_case.py  generate_corpus_of_interesting_cases.py  generate_interesting_case.py  generate_marker_signature_data.sh  generate_signatures.sh  process_signature.py  reduce_case.sh  reduce_missed_opportunity.py  sanitize.py  utils.py
tests/: config_test.py  difftest_test.py
