[metadata]
name = dead
version = 0.1.0
author = Theodoros Theodoridis, Yann Girsberger
author_email = theodort@inf.ethz.ch
description = A tool for finding missed optimizations in compilers
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
url = https://github.com/DeadCodeProductions/dead

classifiers =
    Programming Language :: Python :: 3


[options]
packages=find:
python_requires = >= 3.10
include_package_data = True
install_requires =
    diopter >= 0.0.1
    ccbuilder >= 0.0.9
    callchain-checker >= 0.0.1

[options.packages.find]
where=dead

[options.entry_points]
console_scripts =
    ccbuilder = ccbuilder:run_as_module

[flake8]
max-line-length = 88
extend-ignore = E203
