[metadata]
name = dead
version = 0.0.2
author = Yann Girsberger, Theodoros Theodoridis
author_email = theodort@inf.ethz.ch
description = Dead Code Elimination based Automatic Differential Testing
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
url = https://github.com/DeadCodeProductions/dead

classifiers =
    Programming Language :: Python :: 3

[options]
packages=find:
python_requires = >= 3.10
install_requires =
    diopter == 0.0.5
    dead_instrumenter == 0.2.1
    callchain-checker == 0.0.1

[options.packages.find]
where=dead

[options.entry_points]
console_scripts =
    ccbuilder = dead:run_as_module

[flake8]
max-line-length = 88
extend-ignore = E203
